# itelecast

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run.py
app/: .env.example  main.py
app/api/routers/: health.py  v1_routers.py
app/api/routers/v1/: bot.py  messages.py  users.py
app/api/service/: get_bot_info.py  save_message.py  send_message_directly.py  send_message_to_queue.py
app/bot/: telegram_service.py  telegram_service_interface.py
app/common/exceptions/: __init__.py  app_exceptions.py
app/common/http_response/: responses_doc.py
app/core/: enums.py
app/core/fastapi/: app.py  app_lifespan.py  app_state.py  depends.py  exception_handlers.py  init_app.py  routers.py
app/core/logger/: __init__.py  config.py  get_logger.py
app/core/middleware/: setup.py
app/core/pydantic/: settings.py
app/db_manager/: session.py  session_manager.py
app/models/: posts.py
app/repository/: post_interface.py  post_repository.py
app/scheduler/: jobs.py  register.py
app/utils/: datetime.py
app/utils/date_time/: __init__.py  datetime_utils.py
docs/: telegram_bot_endpoints.md
docs/api-spec/: messages-1001.md
docs/user-stories/: messages-1001-xxx.md  messages-1001.md  messages-1002.md
