[project]
name = "itelecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.116.0",
    "pydantic-settings>=2.10.1",
    "python-telegram-bot[job-queue,rate-limiter]>=22.2",
    "sqlalchemy>=2.0.41",
]


[tool.uv]
dev-dependencies = [
    "ruff==0.11.10",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio==0.23.5",
    "faker>=37.3.0",
    "pytest-order>=1.3.0",
    "playwright>=1.52.0",
]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
extend-select = ["I", "Q"]

[tool.ruff.format]
quote-style = "double"
